--- a/index.html
+++ b/index.html
@@ -932,11 +932,11 @@
             
             // Video URLs (using placeholder videos)
             const VIDEO_URLS = [
-                "s.mp4",
-                "2026-02-07-083943539.mp4",
-                "video_2026-02-07_08-51-34 (2).mp4",
-                "video_2026-02-07_08-51-34 (3).mp4",
-                "ش.mp4"
+                 "./s.mp4",
+                "./2026-02-07-083943539.mp4",
+                "./video_2026-02-07_08-51-34 (2).mp4",
+                "./video_2026-02-07_08-51-34 (3).mp4",
+                "./ش.mp4"
             ];
             
             // Photo URLs (using your images - add more as needed)
@@ -1605,3 +1605,4 @@
 </body>
 
 </html>
+
